# RChat

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  ws_handle.rs
src/frontend/: routes.rs
static/: app.css  chat.js
templates/: chat.html  layout.html
