[package]
name = "RChat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "*", features = ["full"] }
tower = "*"
serde_json = "1.0"
sqlx = { version = "*", features = [ "sqlite", "derive", "uuid", "chrono", "migrate", "runtime-async-std" ] }